--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@types/node": "^22.15.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
